--- a/LfTokenDapp_hh/package.json
+++ b/LfTokenDapp_hh/package.json
@@ -4,11 +4,10 @@
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "^5.0.2",
-    "ethers": "^6.13.2",
-    "hardhat": "^2.22.10",
-    "hardhat-ethers": "^1.0.1"
+    "hardhat": "^2.22.10"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.2"
   }
 }
