--- a/LfTokenDapp/package.json
+++ b/LfTokenDapp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lftokendapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a Hardhat Ignition module that deploys that contract.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +16,8 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
     "dotenv": "^16.4.5"
+  },
+  "directories": {
+    "test": "test"
   }
 }
