--- a/LfTokenDapp/front-end/package.json
+++ b/LfTokenDapp/front-end/package.json
@@ -12,13 +12,18 @@
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.1.0",
     "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "source-map-loader": "^5.0.0",
     "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
