--- a/LfTokenDapp/front-end/package.json
+++ b/LfTokenDapp/front-end/package.json
@@ -752,7 +752,6 @@
     "raw-body": "^2.5.2",
     "react": "^18.3.1",
     "react-app-polyfill": "^3.0.0",
-    "react-app-rewired": "^2.2.1",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.3.1",
     "react-error-overlay": "^6.0.11",
@@ -845,6 +844,7 @@
     "static-eval": "^2.0.2",
     "statuses": "^2.0.1",
     "stop-iteration-iterator": "^1.0.0",
+    "stream": "^0.0.3",
     "strict-uri-encode": "^1.1.0",
     "string_decoder": "^1.3.0",
     "string-length": "^4.0.2",
@@ -1033,9 +1033,9 @@
     "zustand": "^4.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "lint": "eslint './src/**/*.{js,jsx}'"
   },
@@ -1065,6 +1065,7 @@
     "globals": "^15.9.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
+    "react-app-rewired": "^2.2.1",
     "source-map-loader": "^5.0.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
